# wwi_thor_data_api

./: .gitignore  Dockerfile  GeoJson.postman_collection.json  README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt  seed.py
geodjango/: .env.example  settings.py  urls.py
world/: admin.py  load.py  models.py  serializers.py  urls.py  views.py
world/data/: ww1_aircraft.csv  ww1_missions.csv  ww1_weapon.csv
world/data/1880/: cntry1880.geojson
world/data/1920/: cntry1920.geojson
world/migrations/: 0001_initial.py  0002_auto_20210810_1439.py
